Changes on book_mc pages

--- a/celebrate/index.html
+++ b/celebrate/index.html
@@ -170,7 +170,7 @@
                                 <br> - Conferences and seminars.
                             </p>
                             <div class="add-cart-price">
-                                <a href="pages/book_mc_official.html" class="btn-cart">Book Now</a>
+                                <a href="pages/book_mc_professional.html" class="btn-cart">Book Now</a>
                             </div>
                         </div>
                     </div>
@@ -187,7 +187,7 @@
                                 <br> - Send-off and kitchen parties.
                             </p>
                             <div class="add-cart-price">
-                                <a href="pages/book_mc_casual.html" class="btn-cart">Book Now</a>
+                                <a href="pages/book_mc_standard.html" class="btn-cart">Book Now</a>
                             </div>
                         </div>
                     </div>
@@ -204,7 +204,7 @@
                                 <br> - Graduation ceremonies.
                             </p>
                             <div class="add-cart-price">
-                                <a href="pages/book_mc_mixed.html" class="btn-cart">Book Now</a>
+                                <a href="pages/book_mc_community.html" class="btn-cart">Book Now</a>
                             </div>
                         </div>
                     </div>
