--- a/celebrate/pages/book_mc_community.html
+++ b/celebrate/pages/book_mc_community.html
@@ -66,7 +66,7 @@
                 <div class="carts">
                     <div class="cart-details">
                         <img src="../assets/img/mc/mc.jpg" alt="" class="cart-img">
-                        <h5>MC Maeda</h5>
+                        <h5>MC Pilipili</h5>
                         <p>
                             TZS 150,000,00.00
                         </p>
@@ -74,7 +74,7 @@
                     </div>
                     <div class="cart-details">
                         <img src="../assets/img/mc/mc.jpg" alt="" class="cart-img">
-                        <h5>MC Njozi</h5>
+                        <h5>MC Pilipili</h5>
                         <p>
                             TZS 340,000,00.00
                         </p>
@@ -82,7 +82,7 @@
                     </div>
                     <div class="cart-details">
                         <img src="../assets/img/mc/mc.jpg" alt="" class="cart-img">
-                        <h5>MC Njozi</h5>
+                        <h5>MC Pilipili</h5>
                         <p>
                             TZS 340,000,00.00
                         </p>
@@ -138,7 +138,7 @@
         <!-- MCs -->
         <section id="mcs" class="text-black bg-white">
             <div class="container">
-                <h2 class="display-4 text-center text-primary">MC | Professional</h2>
+                <h2 class="display-4 text-center text-primary">MC | Community</h2>
                 <div class="row flex even-columns pt-3 pb-0">
                     <div class="card">
                         <div class="card-img">
@@ -147,10 +147,17 @@
                             </div>
                         </div>
                         <div class="card-body">
-                            <h3>MC Njozi</h3>
-                            <p>
-                                The one and only who could make your ceremony amazing, vibrating and full of joyous moments, no regret working with me.
-                            </p>
+                            <h3>MC Pilipili</h3>
+                            <div class="mc-rating-price">
+                                <div class="rating">
+                                    <i class="fas fa-star text-warning"></i>
+                                    <i class="fas fa-star text-warning"></i>
+                                    <i class="fas fa-star text-warning"></i>
+                                    <i class="far fa-star text-warning"></i>
+                                    <i class="far fa-star text-warning"></i>
+                                </div>
+                                <div class="price-badge">TZS 3,000,000/=</div>
+                            </div>
                             <div class="add-cart-price">
                                 <a href="mc_user_view.html" class="btn-cart">Book Now</a>
                             </div>
@@ -163,10 +170,17 @@
                             </div>
                         </div>
                         <div class="card-body">
-                            <h3>MC Kwetu</h3>
-                            <p>
-                                The one and only who could make your ceremony amazing, vibrating and full of joyous moments, no regret working with me.
-                            </p>
+                            <h3>MC Pilipili</h3>
+                            <div class="mc-rating-price">
+                                <div class="rating">
+                                    <i class="fas fa-star text-warning"></i>
+                                    <i class="fas fa-star text-warning"></i>
+                                    <i class="fas fa-star text-warning"></i>
+                                    <i class="far fa-star text-warning"></i>
+                                    <i class="far fa-star text-warning"></i>
+                                </div>
+                                <div class="price-badge">TZS 3,000,000/=</div>
+                            </div>
                             <div class="add-cart-price">
                                 <a href="mc_user_view.html" class="btn-cart">Book Now</a>
                             </div>
@@ -179,60 +193,17 @@
                             </div>
                         </div>
                         <div class="card-body">
-                            <h3>MC Maeda</h3>
-                            <p>
-                                The one and only who could make your ceremony amazing, vibrating and full of joyous moments, no regret working with me.
-                            </p>
-                            <div class="add-cart-price">
-                                <a href="mc_user_view.html" class="btn-cart">Book Now</a>
+                            <h3>MC Pilipili</h3>
+                            <div class="mc-rating-price">
+                                <div class="rating">
+                                    <i class="fas fa-star text-warning"></i>
+                                    <i class="fas fa-star text-warning"></i>
+                                    <i class="fas fa-star text-warning"></i>
+                                    <i class="far fa-star text-warning"></i>
+                                    <i class="far fa-star text-warning"></i>
+                                </div>
+                                <div class="price-badge">TZS 3,000,000/=</div>
                             </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="row flex even-columns pt-0 pb-0">
-                    <div class="card">
-                        <div class="card-img">
-                            <div class="inner">
-                                <img src="../assets/img/mc/mc.jpg" alt="" class="card-img-top img-fluid">
-                            </div>
-                        </div>
-                        <div class="card-body">
-                            <h3>MC Njozi</h3>
-                            <p>
-                                The one and only who could make your ceremony amazing, vibrating and full of joyous moments, no regret working with me.
-                            </p>
-                            <div class="add-cart-price">
-                                <a href="mc_user_view.html" class="btn-cart">Book Now</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="card">
-                        <div class="card-img">
-                            <div class="inner">
-                                <img src="../assets/img/mc/mc.jpg" alt="" class="card-img-top img-fluid">
-                            </div>
-                        </div>
-                        <div class="card-body">
-                            <h3>MC Kwetu</h3>
-                            <p>
-                                The one and only who could make your ceremony amazing, vibrating and full of joyous moments, no regret working with me.
-                            </p>
-                            <div class="add-cart-price">
-                                <a href="mc_user_view.html" class="btn-cart">Book Now</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="card">
-                        <div class="card-img">
-                            <div class="inner">
-                                <img src="../assets/img/mc/mc.jpg" alt="" class="card-img-top img-fluid">
-                            </div>
-                        </div>
-                        <div class="card-body">
-                            <h3>MC Maeda</h3>
-                            <p>
-                                The one and only who could make your ceremony amazing, vibrating and full of joyous moments, no regret working with me.
-                            </p>
                             <div class="add-cart-price">
                                 <a href="mc_user_view.html" class="btn-cart">Book Now</a>
                             </div>
@@ -247,10 +218,17 @@
                             </div>
                         </div>
                         <div class="card-body">
-                            <h3>MC Njozi</h3>
-                            <p>
-                                The one and only who could make your ceremony amazing, vibrating and full of joyous moments, no regret working with me.
-                            </p>
+                            <h3>MC Pilipili</h3>
+                            <div class="mc-rating-price">
+                                <div class="rating">
+                                    <i class="fas fa-star text-warning"></i>
+                                    <i class="fas fa-star text-warning"></i>
+                                    <i class="fas fa-star text-warning"></i>
+                                    <i class="far fa-star text-warning"></i>
+                                    <i class="far fa-star text-warning"></i>
+                                </div>
+                                <div class="price-badge">TZS 3,000,000/=</div>
+                            </div>
                             <div class="add-cart-price">
                                 <a href="mc_user_view.html" class="btn-cart">Book Now</a>
                             </div>
@@ -263,10 +241,17 @@
                             </div>
                         </div>
                         <div class="card-body">
-                            <h3>MC Kwetu</h3>
-                            <p>
-                                The one and only who could make your ceremony amazing, vibrating and full of joyous moments, no regret working with me.
-                            </p>
+                            <h3>MC Pilipili</h3>
+                            <div class="mc-rating-price">
+                                <div class="rating">
+                                    <i class="fas fa-star text-warning"></i>
+                                    <i class="fas fa-star text-warning"></i>
+                                    <i class="fas fa-star text-warning"></i>
+                                    <i class="far fa-star text-warning"></i>
+                                    <i class="far fa-star text-warning"></i>
+                                </div>
+                                <div class="price-badge">TZS 3,000,000/=</div>
+                            </div>
                             <div class="add-cart-price">
                                 <a href="mc_user_view.html" class="btn-cart">Book Now</a>
                             </div>
@@ -279,10 +264,88 @@
                             </div>
                         </div>
                         <div class="card-body">
-                            <h3>MC Maeda</h3>
-                            <p>
-                                The one and only who could make your ceremony amazing, vibrating and full of joyous moments, no regret working with me.
-                            </p>
+                            <h3>MC Pilipili</h3>
+                            <div class="mc-rating-price">
+                                <div class="rating">
+                                    <i class="fas fa-star text-warning"></i>
+                                    <i class="fas fa-star text-warning"></i>
+                                    <i class="fas fa-star text-warning"></i>
+                                    <i class="far fa-star text-warning"></i>
+                                    <i class="far fa-star text-warning"></i>
+                                </div>
+                                <div class="price-badge">TZS 3,000,000/=</div>
+                            </div>
+                            <div class="add-cart-price">
+                                <a href="mc_user_view.html" class="btn-cart">Book Now</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row flex even-columns pt-0 pb-0">
+                    <div class="card">
+                        <div class="card-img">
+                            <div class="inner">
+                                <img src="../assets/img/mc/mc.jpg" alt="" class="card-img-top img-fluid">
+                            </div>
+                        </div>
+                        <div class="card-body">
+                            <h3>MC Pilipili</h3>
+                            <div class="mc-rating-price">
+                                <div class="rating">
+                                    <i class="fas fa-star text-warning"></i>
+                                    <i class="fas fa-star text-warning"></i>
+                                    <i class="fas fa-star text-warning"></i>
+                                    <i class="far fa-star text-warning"></i>
+                                    <i class="far fa-star text-warning"></i>
+                                </div>
+                                <div class="price-badge">TZS 3,000,000/=</div>
+                            </div>
+                            <div class="add-cart-price">
+                                <a href="mc_user_view.html" class="btn-cart">Book Now</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="card-img">
+                            <div class="inner">
+                                <img src="../assets/img/mc/mc.jpg" alt="" class="card-img-top img-fluid">
+                            </div>
+                        </div>
+                        <div class="card-body">
+                            <h3>MC Pilipili</h3>
+                            <div class="mc-rating-price">
+                                <div class="rating">
+                                    <i class="fas fa-star text-warning"></i>
+                                    <i class="fas fa-star text-warning"></i>
+                                    <i class="fas fa-star text-warning"></i>
+                                    <i class="far fa-star text-warning"></i>
+                                    <i class="far fa-star text-warning"></i>
+                                </div>
+                                <div class="price-badge">TZS 3,000,000/=</div>
+                            </div>
+                            <div class="add-cart-price">
+                                <a href="mc_user_view.html" class="btn-cart">Book Now</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="card-img">
+                            <div class="inner">
+                                <img src="../assets/img/mc/mc.jpg" alt="" class="card-img-top img-fluid">
+                            </div>
+                        </div>
+                        <div class="card-body">
+                            <h3>MC Pilipili</h3>
+                            <div class="mc-rating-price">
+                                <div class="rating">
+                                    <i class="fas fa-star text-warning"></i>
+                                    <i class="fas fa-star text-warning"></i>
+                                    <i class="fas fa-star text-warning"></i>
+                                    <i class="far fa-star text-warning"></i>
+                                    <i class="far fa-star text-warning"></i>
+                                </div>
+                                <div class="price-badge">TZS 3,000,000/=</div>
+                            </div>
                             <div class="add-cart-price">
                                 <a href="mc_user_view.html" class="btn-cart">Book Now</a>
                             </div>
@@ -300,7 +363,7 @@
         <div class="container">
             <div class="row even-columns">
                 <div class="col">
-                    <img src="../assets/img/logo/logo5.svg " alt=" " class="img-fluid footer-logo ">
+                    <img src="../assets/img/logo/logo5.svg " alt=" " class="img-fluid footer-logo">
                 </div>
                 <div class="col">
                     <h3 class="text-secondary">
