--- a/celebrate/pages/book_mc_professional.html
+++ b/celebrate/pages/book_mc_professional.html
@@ -138,7 +138,7 @@
         <!-- MCs -->
         <section id="mcs" class="text-black bg-white">
             <div class="container">
-                <h2 class="display-4 text-center text-primary">MC | Community</h2>
+                <h2 class="display-4 text-center text-primary">MC | Professional</h2>
                 <div class="row flex even-columns pt-3 pb-0">
                     <div class="card">
                         <div class="card-img">
@@ -148,9 +148,16 @@
                         </div>
                         <div class="card-body">
                             <h3>MC Pilipili</h3>
-                            <p>
-                                The one and only who could make your ceremony amazing, vibrating and full of joyous moments, no regret working with me.
-                            </p>
+                            <div class="mc-rating-price">
+                                <div class="rating">
+                                    <i class="fas fa-star text-warning"></i>
+                                    <i class="fas fa-star text-warning"></i>
+                                    <i class="fas fa-star text-warning"></i>
+                                    <i class="far fa-star text-warning"></i>
+                                    <i class="far fa-star text-warning"></i>
+                                </div>
+                                <div class="price-badge">TZS 3,000,000/=</div>
+                            </div>
                             <div class="add-cart-price">
                                 <a href="mc_user_view.html" class="btn-cart">Book Now</a>
                             </div>
@@ -164,9 +171,16 @@
                         </div>
                         <div class="card-body">
                             <h3>MC Pilipili</h3>
-                            <p>
-                                The one and only who could make your ceremony amazing, vibrating and full of joyous moments, no regret working with me.
-                            </p>
+                            <div class="mc-rating-price">
+                                <div class="rating">
+                                    <i class="fas fa-star text-warning"></i>
+                                    <i class="fas fa-star text-warning"></i>
+                                    <i class="fas fa-star text-warning"></i>
+                                    <i class="far fa-star text-warning"></i>
+                                    <i class="far fa-star text-warning"></i>
+                                </div>
+                                <div class="price-badge">TZS 3,000,000/=</div>
+                            </div>
                             <div class="add-cart-price">
                                 <a href="mc_user_view.html" class="btn-cart">Book Now</a>
                             </div>
@@ -180,59 +194,16 @@
                         </div>
                         <div class="card-body">
                             <h3>MC Pilipili</h3>
-                            <p>
-                                The one and only who could make your ceremony amazing, vibrating and full of joyous moments, no regret working with me.
-                            </p>
-                            <div class="add-cart-price">
-                                <a href="mc_user_view.html" class="btn-cart">Book Now</a>
+                            <div class="mc-rating-price">
+                                <div class="rating">
+                                    <i class="fas fa-star text-warning"></i>
+                                    <i class="fas fa-star text-warning"></i>
+                                    <i class="fas fa-star text-warning"></i>
+                                    <i class="far fa-star text-warning"></i>
+                                    <i class="far fa-star text-warning"></i>
+                                </div>
+                                <div class="price-badge">TZS 3,000,000/=</div>
                             </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="row flex even-columns pt-0 pb-0">
-                    <div class="card">
-                        <div class="card-img">
-                            <div class="inner">
-                                <img src="../assets/img/mc/mc.jpg" alt="" class="card-img-top img-fluid">
-                            </div>
-                        </div>
-                        <div class="card-body">
-                            <h3>MC Pilipili</h3>
-                            <p>
-                                The one and only who could make your ceremony amazing, vibrating and full of joyous moments, no regret working with me.
-                            </p>
-                            <div class="add-cart-price">
-                                <a href="mc_user_view.html" class="btn-cart">Book Now</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="card">
-                        <div class="card-img">
-                            <div class="inner">
-                                <img src="../assets/img/mc/mc.jpg" alt="" class="card-img-top img-fluid">
-                            </div>
-                        </div>
-                        <div class="card-body">
-                            <h3>MC Pilipili</h3>
-                            <p>
-                                The one and only who could make your ceremony amazing, vibrating and full of joyous moments, no regret working with me.
-                            </p>
-                            <div class="add-cart-price">
-                                <a href="mc_user_view.html" class="btn-cart">Book Now</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="card">
-                        <div class="card-img">
-                            <div class="inner">
-                                <img src="../assets/img/mc/mc.jpg" alt="" class="card-img-top img-fluid">
-                            </div>
-                        </div>
-                        <div class="card-body">
-                            <h3>MC Pilipili</h3>
-                            <p>
-                                The one and only who could make your ceremony amazing, vibrating and full of joyous moments, no regret working with me.
-                            </p>
                             <div class="add-cart-price">
                                 <a href="mc_user_view.html" class="btn-cart">Book Now</a>
                             </div>
@@ -248,9 +219,16 @@
                         </div>
                         <div class="card-body">
                             <h3>MC Pilipili</h3>
-                            <p>
-                                The one and only who could make your ceremony amazing, vibrating and full of joyous moments, no regret working with me.
-                            </p>
+                            <div class="mc-rating-price">
+                                <div class="rating">
+                                    <i class="fas fa-star text-warning"></i>
+                                    <i class="fas fa-star text-warning"></i>
+                                    <i class="fas fa-star text-warning"></i>
+                                    <i class="far fa-star text-warning"></i>
+                                    <i class="far fa-star text-warning"></i>
+                                </div>
+                                <div class="price-badge">TZS 3,000,000/=</div>
+                            </div>
                             <div class="add-cart-price">
                                 <a href="mc_user_view.html" class="btn-cart">Book Now</a>
                             </div>
@@ -264,9 +242,16 @@
                         </div>
                         <div class="card-body">
                             <h3>MC Pilipili</h3>
-                            <p>
-                                The one and only who could make your ceremony amazing, vibrating and full of joyous moments, no regret working with me.
-                            </p>
+                            <div class="mc-rating-price">
+                                <div class="rating">
+                                    <i class="fas fa-star text-warning"></i>
+                                    <i class="fas fa-star text-warning"></i>
+                                    <i class="fas fa-star text-warning"></i>
+                                    <i class="far fa-star text-warning"></i>
+                                    <i class="far fa-star text-warning"></i>
+                                </div>
+                                <div class="price-badge">TZS 3,000,000/=</div>
+                            </div>
                             <div class="add-cart-price">
                                 <a href="mc_user_view.html" class="btn-cart">Book Now</a>
                             </div>
@@ -280,9 +265,87 @@
                         </div>
                         <div class="card-body">
                             <h3>MC Pilipili</h3>
-                            <p>
-                                The one and only who could make your ceremony amazing, vibrating and full of joyous moments, no regret working with me.
-                            </p>
+                            <div class="mc-rating-price">
+                                <div class="rating">
+                                    <i class="fas fa-star text-warning"></i>
+                                    <i class="fas fa-star text-warning"></i>
+                                    <i class="fas fa-star text-warning"></i>
+                                    <i class="far fa-star text-warning"></i>
+                                    <i class="far fa-star text-warning"></i>
+                                </div>
+                                <div class="price-badge">TZS 3,000,000/=</div>
+                            </div>
+                            <div class="add-cart-price">
+                                <a href="mc_user_view.html" class="btn-cart">Book Now</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row flex even-columns pt-0 pb-0">
+                    <div class="card">
+                        <div class="card-img">
+                            <div class="inner">
+                                <img src="../assets/img/mc/mc.jpg" alt="" class="card-img-top img-fluid">
+                            </div>
+                        </div>
+                        <div class="card-body">
+                            <h3>MC Pilipili</h3>
+                            <div class="mc-rating-price">
+                                <div class="rating">
+                                    <i class="fas fa-star text-warning"></i>
+                                    <i class="fas fa-star text-warning"></i>
+                                    <i class="fas fa-star text-warning"></i>
+                                    <i class="far fa-star text-warning"></i>
+                                    <i class="far fa-star text-warning"></i>
+                                </div>
+                                <div class="price-badge">TZS 3,000,000/=</div>
+                            </div>
+                            <div class="add-cart-price">
+                                <a href="mc_user_view.html" class="btn-cart">Book Now</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="card-img">
+                            <div class="inner">
+                                <img src="../assets/img/mc/mc.jpg" alt="" class="card-img-top img-fluid">
+                            </div>
+                        </div>
+                        <div class="card-body">
+                            <h3>MC Pilipili</h3>
+                            <div class="mc-rating-price">
+                                <div class="rating">
+                                    <i class="fas fa-star text-warning"></i>
+                                    <i class="fas fa-star text-warning"></i>
+                                    <i class="fas fa-star text-warning"></i>
+                                    <i class="far fa-star text-warning"></i>
+                                    <i class="far fa-star text-warning"></i>
+                                </div>
+                                <div class="price-badge">TZS 3,000,000/=</div>
+                            </div>
+                            <div class="add-cart-price">
+                                <a href="mc_user_view.html" class="btn-cart">Book Now</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="card-img">
+                            <div class="inner">
+                                <img src="../assets/img/mc/mc.jpg" alt="" class="card-img-top img-fluid">
+                            </div>
+                        </div>
+                        <div class="card-body">
+                            <h3>MC Pilipili</h3>
+                            <div class="mc-rating-price">
+                                <div class="rating">
+                                    <i class="fas fa-star text-warning"></i>
+                                    <i class="fas fa-star text-warning"></i>
+                                    <i class="fas fa-star text-warning"></i>
+                                    <i class="far fa-star text-warning"></i>
+                                    <i class="far fa-star text-warning"></i>
+                                </div>
+                                <div class="price-badge">TZS 3,000,000/=</div>
+                            </div>
                             <div class="add-cart-price">
                                 <a href="mc_user_view.html" class="btn-cart">Book Now</a>
                             </div>
@@ -300,7 +363,7 @@
         <div class="container">
             <div class="row even-columns">
                 <div class="col">
-                    <img src="../assets/img/logo/logo5.svg " alt=" " class="img-fluid footer-logo">
+                    <img src="../assets/img/logo/logo5.svg " alt=" " class="img-fluid footer-logo ">
                 </div>
                 <div class="col">
                     <h3 class="text-secondary">
