Modification on mc_book pages

--- a/celebrate/pages/about.html
+++ b/celebrate/pages/about.html
@@ -158,8 +158,7 @@
                     <div class="col col-text">
                         <h3 class="mission-heading">Our Mission</h3>
                         <p class="mission-para">
-                            Making your ceremony memorable with the greatest master of ceremony of your choice, and bringing the greatest heart's satisfaction and joy to celebrate. <br> Making your ceremony memorable with the greatest master of ceremony
-                            of your choice, and bringing the greatest heart's satisfaction and joy to celebrate.
+                            Connecting Masters of ceremonies (Hosts) to their potential clients and clients to their desired MCs.
                         </p>
                     </div>
                 </div>
