Beautiful changes have been made

--- a/celebrate/pages/about.html
+++ b/celebrate/pages/about.html
@@ -156,10 +156,18 @@
                         <img src="../assets/img/hero/hero6.svg" alt="" class="img-fluid">
                     </div>
                     <div class="col col-text">
-                        <h3 class="mission-heading">Our Mission</h3>
-                        <p class="mission-para">
-                            Connecting Masters of ceremonies (Hosts) to their potential clients and clients to their desired MCs.
+                        <p class="lead pb-2">
+                            We are a group of company. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Similique architecto cum hic natus dignissimos explicabo Quas voluptate, sint deserunt ex cum incidunt exercitationem, expedita veritatis corporis aspernatur dolor laboriosam
+                            cupiditate.
                         </p>
+                        <div class="card">
+                            <div class="card-body">
+                                <h3 class="mission-heading">Our Mission</h3>
+                                <p class="mission-para">
+                                    Connecting Masters of ceremonies (Hosts) to their potential clients and clients to their desired MCs.
+                                </p>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -193,6 +201,51 @@
                     </div>
                 </div>
             </div>
+        </section>
+        <!-- End About 3 -->
+
+        <!-- Tean -->
+        <section id="team" class="bg-white">
+            <div class="container">
+                <h2 class="display-4 text-center text-black pt-4">Meet Our Team</h2>
+                <div class="even-columns py-4">
+                    <div class="col">
+                        <div class="user">
+                            <img src="../assets/img/user/user1.jpg" alt="" class="img-fluid user-img">
+                        </div>
+                        <div class="card">
+                            <div class="card-body">
+                                <div class="card-body-content">
+                                    <div class="ceo-text">
+                                        <h3 class="ceo-name">Prosper Mbuma</h3>
+                                        <p class="ceo-position">
+                                            CEO and founder of Celebrate
+                                        </p>
+                                    </div>
+                                    <div class="social">
+                                        <a href="https://www.facebook.com/prosper.mbuma.5/" target="_blank" rel="noopener noreferrer">
+                                            <i class="fab fa-facebook"></i>
+                                        </a>
+                                        <a href="https://www.instagram.com/prosper_mbuma" target="_blank" rel="noopener noreferrer">
+                                            <i class="fab fa-instagram"></i>
+                                        </a>
+                                        <a href="https://twitter.com/MbumaProsper" target="_blank" rel="noopener noreferrer">
+                                            <i class="fab fa-twitter"></i>
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <h1 class="lead">From CEO</h1>
+                        <div class="card">
+                            <div class="card-body">
+                                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Excepturi veritatis quas doloribus enim quam. Assumenda sapiente numquam magni corporis possimus dolores minima. Quo modi dolor ducimus rerum fugiat quae soluta?</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
         </section>
         <!-- End About -->
 
@@ -235,16 +288,16 @@
             <hr class="bg-gray mt-3">
             <div class="flex-space-between pt-2">
                 <div class="social">
-                    <a href="#" target="_blank" rel="noopener noreferrer">
+                    <a href="https://www.youtube.com/channel/UCrf-elDit7duHTcnL3zceoQ" target="_blank" rel="noopener noreferrer">
                         <i class="fab fa-youtube"></i>
                     </a>
-                    <a href="#" target="_blank" rel="noopener noreferrer">
+                    <a href="" target="_blank" rel="noopener noreferrer">
                         <i class="fab fa-facebook"></i>
                     </a>
                     <a href="https://www.instagram.com/celebrate_tanzania/" target="_blank" rel="noopener noreferrer">
                         <i class="fab fa-instagram"></i>
                     </a>
-                    <a href="#" target="_blank" rel="noopener noreferrer">
+                    <a href="https://twitter.com/CelebrateTz" target="_blank" rel="noopener noreferrer">
                         <i class="fab fa-twitter"></i>
                     </a>
                 </div>
