--- a/celebrate/index.html
+++ b/celebrate/index.html
@@ -527,7 +527,7 @@
             <hr class="bg-gray mt-3">
             <div class="flex-space-between pt-2">
                 <div class="social">
-                    <a href="#" target="_blank" rel="noopener noreferrer">
+                    <a href="https://www.youtube.com/channel/UCrf-elDit7duHTcnL3zceoQ" target="_blank" rel="noopener noreferrer">
                         <i class="fab fa-youtube"></i>
                     </a>
                     <a href="#" target="_blank" rel="noopener noreferrer">
