--- a/celebrate/pages/contact.html
+++ b/celebrate/pages/contact.html
@@ -162,7 +162,7 @@
                             <div class="addr-wrap">
                                 <i class="fas fa-map-marker-alt"></i>
                                 <div class="addr">
-                                    <h3>Address</h3>
+                                    <h3>Physical Address</h3>
                                     <p>
                                         Box 261 Kinondoni,
                                         <br> Dar es salaam, Tanzania
@@ -201,12 +201,12 @@
                         </div>
                     </div>
                 </div>
-                <div class="map pt-3">
-                    <h2 class="display-4 text-center text-primary">OUR LOCATION</h2>
-                    <iframe title="IFM Map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3961.6367935266585!2d39.29122961471989!3d-6.8139554950752075!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x185c4b113fc2db53%3A0x1735d30e3398bba!2sInstitute%20of%20Finance%20Management%20(IFM)!5e0!3m2!1sen!2stz!4v1622844016338!5m2!1sen!2stz"
-                        allowfullscreen="" loading="lazy">
-                    </iframe>
-                </div>
+            </div>
+            <div class="map">
+                <!-- <h2 class="display-4 text-center text-primary">LOCATION</h2> -->
+                <iframe title="IFM Map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3961.6367935266585!2d39.29122961471989!3d-6.8139554950752075!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x185c4b113fc2db53%3A0x1735d30e3398bba!2sInstitute%20of%20Finance%20Management%20(IFM)!5e0!3m2!1sen!2stz!4v1622844016338!5m2!1sen!2stz"
+                    allowfullscreen="" loading="lazy">
+                </iframe>
             </div>
         </section>
         <!-- End Contact -->
@@ -250,7 +250,7 @@
             <hr class="bg-gray mt-3">
             <div class="flex-space-between pt-2">
                 <div class="social">
-                    <a href="#" target="_blank" rel="noopener noreferrer">
+                    <a href="https://www.youtube.com/channel/UCrf-elDit7duHTcnL3zceoQ" target="_blank" rel="noopener noreferrer">
                         <i class="fab fa-youtube"></i>
                     </a>
                     <a href="#" target="_blank" rel="noopener noreferrer">
