--- a/celebrate/pages/reviews.html
+++ b/celebrate/pages/reviews.html
@@ -160,7 +160,7 @@
                                     <i class="fas fa-star text-warning"></i>
                                 </div>
                                 <div class="review-text flex pt-1">
-                                    <p class="lead">Please log in to leave a review</p>
+                                    <p class="lead">Please login to leave a review</p>
                                 </div>
                                 <div class="social flex py-1">
                                     <a href="#" target="_blank" rel="noopener noreferrer">
@@ -421,7 +421,7 @@
             <hr class="bg-gray mt-3">
             <div class="flex-space-between pt-2">
                 <div class="social">
-                    <a href="#" target="_blank" rel="noopener noreferrer">
+                    <a href="https://www.youtube.com/channel/UCrf-elDit7duHTcnL3zceoQ" target="_blank" rel="noopener noreferrer">
                         <i class="fab fa-youtube"></i>
                     </a>
                     <a href="#" target="_blank" rel="noopener noreferrer">
