Added social media links

--- a/celebrate/pages/checkout.html
+++ b/celebrate/pages/checkout.html
@@ -267,16 +267,16 @@
             <hr class="bg-gray mt-3">
             <div class="flex-space-between pt-2">
                 <div class="social">
-                    <a href="#" target="_blank" rel="noopener noreferrer">
+                    <a href="https://www.youtube.com/channel/UCrf-elDit7duHTcnL3zceoQ" target="_blank" rel="noopener noreferrer">
                         <i class="fab fa-youtube"></i>
                     </a>
-                    <a href="#" target="_blank" rel="noopener noreferrer">
+                    <a href="https://www.facebook.com/profile.php?id=100085464306282" target="_blank" rel="noopener noreferrer">
                         <i class="fab fa-facebook"></i>
                     </a>
                     <a href="https://www.instagram.com/celebrate_tanzania/" target="_blank" rel="noopener noreferrer">
                         <i class="fab fa-instagram"></i>
                     </a>
-                    <a href="#" target="_blank" rel="noopener noreferrer">
+                    <a href="https://twitter.com/CelebrateTz" target="_blank" rel="noopener noreferrer">
                         <i class="fab fa-twitter"></i>
                     </a>
                 </div>
