--- a/celebrate/pages/reviews.html
+++ b/celebrate/pages/reviews.html
@@ -424,13 +424,13 @@
                     <a href="https://www.youtube.com/channel/UCrf-elDit7duHTcnL3zceoQ" target="_blank" rel="noopener noreferrer">
                         <i class="fab fa-youtube"></i>
                     </a>
-                    <a href="#" target="_blank" rel="noopener noreferrer">
+                    <a href="https://www.facebook.com/profile.php?id=100085464306282" target="_blank" rel="noopener noreferrer">
                         <i class="fab fa-facebook"></i>
                     </a>
                     <a href="https://www.instagram.com/celebrate_tanzania/" target="_blank" rel="noopener noreferrer">
                         <i class="fab fa-instagram"></i>
                     </a>
-                    <a href="#" target="_blank" rel="noopener noreferrer">
+                    <a href="https://twitter.com/CelebrateTz" target="_blank" rel="noopener noreferrer">
                         <i class="fab fa-twitter"></i>
                     </a>
                 </div>
