--- a/celebrate/pages/mc_user_view.html
+++ b/celebrate/pages/mc_user_view.html
@@ -185,48 +185,36 @@
                     <h2 class="display-4">What I Have Done</h2>
                 </div>
                 <div class="flex even-columns pt-3 pb-0">
-                    <!-- <iframe src="https://www.youtube.com/watch?v=FFUQEHRSMQA" frameborder="0"></iframe>
-                    <iframe src="https://www.youtube.com/watch?v=FFUQEHRSMQA" frameborder="0"></iframe>
-                    <iframe src="https://www.youtube.com/watch?v=FFUQEHRSMQA" frameborder="0"></iframe> -->
-                    <!-- <div class="mc-photo">
-                        <img src="../assets/img/mc/mc31.jpg" alt="" class="img-fluid">
-                    </div>
-                    <div class="mc-photo">
-                        <img src="../assets/img/mc/mc31.jpg" alt="" class="img-fluid">
-                    </div>
-                    <div class="mc-photo">
-                        <img src="../assets/img/mc/mc31.jpg" alt="" class="img-fluid">
-                    </div> -->
                     <video width="300px" controls>
-                        <source src="../assets/video/Kingdom.mp4" type="video/mp4">
+                        <source src="../assets/video/celebrate.mp4" type="video/mp4">
                     </video>
                     <video width="300px" controls>
-                        <source src="../assets/video/Kingdom.mp4" type="video/mp4">
+                        <source src="../assets/video/celebrate.mp4" type="video/mp4">
                     </video>
                     <video width="300px" controls>
-                        <source src="../assets/video/Kingdom.mp4" type="video/mp4">
+                        <source src="../assets/video/celebrate.mp4" type="video/mp4">
                     </video>
                 </div>
                 <div class="flex even-columns pb-0">
                     <video width="300px" controls>
-                        <source src="../assets/video/Kingdom.mp4" type="video/mp4">
+                        <source src="../assets/video/celebrate.mp4" type="video/mp4">
                     </video>
                     <video width="300px" controls>
-                        <source src="../assets/video/Kingdom.mp4" type="video/mp4">
+                        <source src="../assets/video/celebrate.mp4" type="video/mp4">
                     </video>
                     <video width="300px" controls>
-                        <source src="../assets/video/Kingdom.mp4" type="video/mp4">
+                        <source src="../assets/video/celebrate.mp4" type="video/mp4">
                     </video>
                 </div>
                 <div class="flex even-columns pb-0">
                     <video width="300px" controls>
-                        <source src="../assets/video/Kingdom.mp4" type="video/mp4">
+                        <source src="../assets/video/celebrate.mp4" type="video/mp4">
                     </video>
                     <video width="300px" controls>
-                        <source src="../assets/video/Kingdom.mp4" type="video/mp4">
+                        <source src="../assets/video/celebrate.mp4" type="video/mp4">
                     </video>
                     <video width="300px" controls>
-                        <source src="../assets/video/Kingdom.mp4" type="video/mp4">
+                        <source src="../assets/video/celebrate.mp4" type="video/mp4">
                     </video>
                 </div>
             </div>
